--- a/gerenzhongxin.html
+++ b/gerenzhongxin.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人中心</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/geren.css">
+    <link rel="stylesheet" href="css/gerenzhongxin.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_yen1wfql8i7.css">
 </head>
 <body>
