--- a/weixuanzegouwuche.html
+++ b/weixuanzegouwuche.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>未选择购物车</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/shop2.css">
+    <link rel="stylesheet" href="css/weixuanzegouwuche.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_k9z9nk9b84r.css">
 </head>
 <body>
