--- a/wodedizhi.html
+++ b/wodedizhi.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的地址</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/wddz.css">
+    <link rel="stylesheet" href="css/wodedizhi.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_5abbohnjwqt.css">
 </head>
 <body>
