--- a/xuanzhongdecaidan.html
+++ b/xuanzhongdecaidan.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>选中的菜单</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/list2.css">
+    <link rel="stylesheet" href="css/xuanzhongdecaidan.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_p5qk59je6yg.css">
 </head>
 <body>
