--- a/xuanzhonggouwuche.html
+++ b/xuanzhonggouwuche.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>选中购物车</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/xuanzhonggouwuche.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_k9z9nk9b84r.css">
 </head>
 <body>
