--- a/shangpinxiangqing.html
+++ b/shangpinxiangqing.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>商品详情</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/shopxq.css">
+    <link rel="stylesheet" href="css/shangpinxiangqing.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1203217_hs0lzmsz278.css">
 </head>
 <body>
