--- a/tianxiedingdan.html
+++ b/tianxiedingdan.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>填写订单</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/txdd.css">
+    <link rel="stylesheet" href="css/tianxiedingdan.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203174_9ck5krz61w6.css">
 </head>
 <body>
