--- a/wodedingdan.html
+++ b/wodedingdan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的订单</title>
-    <link rel="stylesheet" href="css/wddd.css">
+    <link rel="stylesheet" href="css/wodedingdan.css">
     <link rel="stylesheet" href="css/rem.css">
     <link rel="stylesheet" href="https:////at.alicdn.com/t/font_1205137_ovwneylpbmq.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1203620_glr6cf9tf2s.css">
