--- a/zhifuchenggong.html
+++ b/zhifuchenggong.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>支付成功</title>
     <link rel="stylesheet" href="css/rem.css">
-    <link rel="stylesheet" href="css/zfcg.css">
+    <link rel="stylesheet" href="css/zhifuchenggong.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1203217_hs0lzmsz278.css">
 </head>
 <body>
